--- a/app/src/main/res/layout/activity_change_password_success.xml
+++ b/app/src/main/res/layout/activity_change_password_success.xml
@@ -4,15 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@drawable/background_login"
+    android:theme="@style/Theme.Login"
+    tools:context=".ChangePasswordSuccess">
 
     <TextView
+        android:id="@+id/text_view_redirect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Password reset. You are being redirected..."
+        android:textColor="@color/color_brightest"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
