--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,28 @@
     <!-- Base application theme. -->
     <style name="Theme.Alicisindan" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">          @color/color_bright     </item>
+        <item name="colorPrimaryVariant">   @color/color_dark       </item>
+        <item name="colorOnPrimary">        @color/color_brightest  </item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="colorSecondary">        @color/color_bright         </item>
+        <item name="colorSecondaryVariant"> @color/color_dark         </item>
+        <item name="colorOnSecondary">      @color/color_brightest  </item>
+        <!-- Status bar settings. -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant   </item>
+        <item name="android:actionBarSize"> 50dp                        </item>
+        <!-- Customize your theme here. -->
+    </style>
+    <!-- Entry/Login theme. -->
+    <style name="Theme.Login" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">          @color/color_bright     </item>
+        <item name="colorPrimaryVariant">   @color/color_dark       </item>
+        <item name="colorOnPrimary">        @color/color_brightest  </item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">        @color/color_bright         </item>
+        <item name="colorSecondaryVariant"> @color/color_dark         </item>
+        <item name="colorOnSecondary">      @color/color_brightest  </item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
